# demo_pdf_searcher_sqlite_fts5

./: .gitignore  meson.build  test_icu_seg_cjk.cpp  test_pdf_printer.cpp  test_sqlite_fts5.cpp
